# control-cli

./: .gitignore  Cargo.toml  README.md  lib.rs
.github/release-please/: config.json
.github/workflows/: release-mac.yml  release-please.yml  release-ubuntu.yml  release-windows.yml  test.yml
cli/: Cargo.toml
cli/src/: fs.rs  lib.rs  main.rs  parser.rs
cli/src/control/: code.rs
cli/tests/: cli.rs
cli/tests/fixtures/: .control-log.java.br
cli/tests/resources/java/: Program.java
cli/tests/resources/js/subdirectory/: component.jsx  submodule.js
cli/tests/resources/ts/: index.ts
cli/tests/resources/ts/subdirectory/: component.tsx  submodule.ts
parsers/java/: Cargo.toml
parsers/java/src/: lib.rs
parsers/javascript/: Cargo.toml
parsers/javascript/src/: lib.rs
parsers/typescript/: Cargo.toml
parsers/typescript/src/: lib.rs
