[package]
name = "control-cli"
version = "0.0.1"
authors.workspace = true
edition = "2021"

[[bin]]
name = "control"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
brotli = "3.3.4"
clap = { version = "4.1.9", features = ["derive"] }
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
flate2 = "1.0.25"
libloading = "0.7.4"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = "1.0.156"
serde_json = "1.0.94"
tar = "0.4.38"
tree-sitter = "=0.20.9"
zip-extract = "0.1.2"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
predicates = "3.0.1"
